# MAVSDK

./: .gitmodules  README.md  dockerfile
.github/workflows/: main.yml
examples/ftp_client/: ftp_client.cpp
examples/multiple_drones_add_on_the_fly/: CMakeLists.txt  multiple_drones_add_on_the_fly.cpp
src/mavsdk/core/: connection.h  fs.cpp  fs.h  lazy_plugin.h  mavlink_ftp_client.cpp  mavlink_ftp_client.h  mavlink_ftp_server.cpp  mavlink_ftp_server.h  mavsdk_impl.cpp  serial_connection.cpp  serial_connection.h  server_component_impl.cpp  system_impl.cpp  tcp_connection.cpp  tcp_connection.h  udp_connection.cpp  udp_connection.h
src/mavsdk/core/mocks/: lazy_plugin_mock.h
src/mavsdk/plugins/component_information/: component_information_impl.cpp
src/mavsdk_server/src/: connection_initiator.h  mavsdk_server.cpp  mavsdk_server.h  mavsdk_server_api.cpp  mavsdk_server_api.h  mavsdk_server_bin.cpp
src/mavsdk_server/test/: action_service_impl_test.cpp  camera_service_impl_test.cpp  core_service_impl_test.cpp  info_service_impl_test.cpp  mission_service_impl_test.cpp  offboard_service_impl_test.cpp  telemetry_service_impl_test.cpp
src/system_tests/: CMakeLists.txt  ftp_compare_files.cpp  ftp_create_dir.cpp  ftp_download_file.cpp  ftp_list_dir.cpp  ftp_remove_dir.cpp
templates/mavsdk_server/: call.j2  request.j2  stream.j2
templates/plugin_cpp/: call.j2  request.j2  stream.j2
templates/plugin_h/: call.j2  request.j2  stream.j2
templates/plugin_impl_cpp/: call.j2  request.j2  stream.j2
templates/plugin_impl_h/: call.j2  request.j2  stream.j2
(+40 files in other folders)
